Add spring security (template) Add String Pool (need to be cleaned) Add 3 users in sql script

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,9 @@ spring.datasource.username=bestuser
 spring.datasource.password=bestuser
 
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.flyway.enabled=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
+logging.level.root=INFO
