--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.flyway.enabled=true
 
+#hibernate.show_sql=false
+#spring.jackson.serialization.fail-on-empty-beans=false
+
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
 logging.level.root=INFO
