--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=false
 spring.flyway.enabled=true
 
 #hibernate.show_sql=false
-#spring.jackson.serialization.fail-on-empty-beans=false
+spring.jackson.serialization.fail-on-empty-beans=false
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
