--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.flyway.enabled=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.error.include-message=always
 logging.level.root=INFO
+
+#spring.main.allow-circular-references=true
