--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     implementation 'org.springframework.kafka:spring-kafka'
+//    implementation 'org.webjars:webjars-locator-core:0.52'
+//    implementation 'org.webjars:jquery:3.6.3'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.flywaydb:flyway-mysql'
